--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,3 +1,3 @@
 ---
 - name: Install Ansible.
-  yum: name=ansible state=installed enablerepo=epel
+  yum: name=ansible state=installed enablerepo=epel skip_broken=yes
